testsuite/tests/parser/should_fail/cmdFail001.hs
{-# LANGUAGE Arrows #-}
module CmdFail001 where

f = proc x -> _
