testsuite/tests/parser/should_fail/cmdFail001.stderr

cmdFail001.hs:4:15: error: [GHC-03790] Parse error in command: _
